--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "yarn build && node lib/runTests",
     "build": "webpack --mode production --config webpack.config.cjs",
-    "server": "webpack-dev-server --mode development --config webpack.config.cjs"
+    "dev-server": "webpack-dev-server --mode development --config webpack.config.cjs"
   },
   "type": "module",
   "author": "",
@@ -17,17 +17,23 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "^7.12.1",
     "@babel/preset-react": "7.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "8.0.2",
     "css-loader": "1.0.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "flow-bin": "^0.138.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "style-loader": "0.23.0",
     "webpack": "4.19.1",
     "webpack-cli": "3.1.1",
