--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "test": "yarn build && node lib/runTests",
     "build": "webpack --mode production --config webpack.config.cjs",
-    "dev-server": "webpack-dev-server --mode development --config webpack.config.cjs"
+    "dev-server": "webpack serve --mode development --config webpack.config.cjs"
   },
   "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "7.1.0",
-    "@babel/core": "7.1.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "@babel/preset-flow": "^7.12.1",
-    "@babel/preset-react": "7.0.0",
+    "@babel/preset-react": "^7.12.7",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "8.0.2",
-    "css-loader": "1.0.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -29,18 +29,18 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "flow-bin": "^0.138.0",
+    "html-webpack-plugin": "^5.0.0-alpha.14",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
-    "style-loader": "0.23.0",
-    "webpack": "4.19.1",
-    "webpack-cli": "3.1.1",
-    "webpack-dev-server": "3.1.8"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "style-loader": "^2.0.0"
   }
 }
