--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "createStateMachine.js",
   "scripts": {
     "test": "yarn build && node lib/runTests",
-    "build": "rm -r docs && webpack --mode production --config webpack.config.cjs",
+    "build": "rm -rf docs && webpack --mode production --config webpack.config.cjs",
     "dev-server": "webpack serve --mode development --config webpack.config.cjs"
   },
   "type": "module",
